--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sidd-92/admin-panel-backend#readme",
   "dependencies": {
+    "aws-sdk": "^2.793.0",
     "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.2",
@@ -26,11 +27,11 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^5.10.15",
-    "nodemon": "^2.0.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
-    "aws-sdk": "^2.793.0"
+    "nodemon": "^2.0.6"
   }
 }
